Fixed image overlap issues on iPhone/Safari

--- a/src/components/ErrorOverlay/index.css
+++ b/src/components/ErrorOverlay/index.css
@@ -20,7 +20,7 @@
   
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 100px auto auto;
+  grid-template-rows: auto auto auto;
   justify-items: center;
   align-items: center;
   gap: 20px;
@@ -32,7 +32,7 @@
 }
 
 .error-overlay-img {
-  height: 100%;
+  height: 100px;
 }
 
 @media (max-width: 520px) {
@@ -42,7 +42,7 @@
   }
 
   .error-overlay-img {
-    height: 80%;
+    height: 80px;
   }
 
   .fullscreen-shadow-overlay {
